--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  jwt_decoder: ^1.0.3
   shared_preferences: ^0.5.2
   flutter:
     sdk: flutter
